Fixed bug with dots being squashed

--- a/public/styles.css
+++ b/public/styles.css
@@ -1005,7 +1005,6 @@ body {
 .dots {
     display: flex;
     gap: 5px;
-    width: 80px;
     justify-content: center;
   }
   
